--- a/polybar/config
+++ b/polybar/config
@@ -104,7 +104,7 @@ type = internal/network
 interface = enp0s31f6
 interval = 3.0
 
-format-connected-foreground = #c792ea
+format-connected-foreground = #ecc48d
 label-connected = ETH %local_ip%
 
 format-disconnected =
