--- a/tmux/tmux.conf.template
+++ b/tmux/tmux.conf.template
@@ -84,17 +84,17 @@ set -ga terminal-overrides ",$TERM:RGB"
 # Statusline
 set -g status on
 set -g status-justify centre
-set -g status-style fg="{{ colors.yellow }}"
+set -g status-style fg="{{ theme.primary }}"
 set -g status-position bottom
 set -g status-left ""
 set -g status-right "#S | %d-%m %H:%M "
 
-set -g pane-active-border-style fg="{{ colors.yellow }}"
+set -g pane-active-border-style fg="{{ theme.primary }}"
 set -g pane-border-style fg="{{ colors.grey4 }}"
 set -g pane-border-status bottom
 set -g pane-border-format "#{pane_index}"
 
-setw -g window-status-current-format "#[fg={{ colors.background }},bg={{ colors.yellow }}] #I:#W "
+setw -g window-status-current-format "#[fg={{ colors.background }},bg={{ theme.primary }}] #I:#W "
 setw -g window-status-format "#[fg={{ colors.foreground }}] #I:#W "
 
 # Session
