feat(rofi): show icons in menu

--- a/rofi/theme.rasi.template
+++ b/rofi/theme.rasi.template
@@ -81,6 +81,10 @@ element active, element selected active {
   text-color: @secondary;
 }
 
+element-icon {
+  margin: 0 10px 0 0;
+}
+
 message {
   padding: 5px;
   border-radius: 3px;
