fix(alacritty): use vibile bright black

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -18,7 +18,7 @@ colors:
     yellow: "#ecc48d"
 
   bright:
-    black: "#252b39"
+    black: "#6f737c"
     blue: "#9fd5ff"
     cyan: "#d2ebff"
     green: "#c5ef86"
