feat(polybar): use alert color for low battery

--- a/polybar/config
+++ b/polybar/config
@@ -143,8 +143,11 @@ animation-charging-foreground = #ecc48d
 label-discharging = %percentage%%
 format-discharging = <ramp-capacity> <label-discharging>
 ramp-capacity-0 = 󰁺
+ramp-capacity-0-foreground = #f45c7f
 ramp-capacity-1 = 󰁻
+ramp-capacity-1-foreground = #f45c7f
 ramp-capacity-2 = 󰁼
+ramp-capacity-2-foreground = #f45c7f
 ramp-capacity-3 = 󰁽
 ramp-capacity-4 = 󰁾
 ramp-capacity-5 = 󰁿
