--- a/polybar/config.template
+++ b/polybar/config.template
@@ -143,8 +143,11 @@ animation-charging-foreground = {{ theme.primary }}
 label-discharging = %percentage%%
 format-discharging = <ramp-capacity> <label-discharging>
 ramp-capacity-0 = 󰁺
+ramp-capacity-0-foreground = {{ theme.alert }}
 ramp-capacity-1 = 󰁻
+ramp-capacity-1-foreground = {{ theme.alert }}
 ramp-capacity-2 = 󰁼
+ramp-capacity-2-foreground = {{ theme.alert }}
 ramp-capacity-3 = 󰁽
 ramp-capacity-4 = 󰁾
 ramp-capacity-5 = 󰁿
