improvement(systemd): use i3-session.target

--- a/systemd/i3.service
+++ b/systemd/i3.service
@@ -1,14 +1,7 @@
 [Unit]
 Description=i3 window manager
-Wants=polybar.service
-Wants=picom.service
-Wants=wallpaper.service
-Wants=theme.service
-
-Before=polybar.service
-Before=picom.service
-Before=wallpaper.service
-Before=theme.service
+After=xsession.target
+Wants=xsession.target
 
 [Service]
 Type=notify
