--- a/i3/config
+++ b/i3/config
@@ -35,6 +35,7 @@ font pango:Hasklug Nerd Font 10
 floating_modifier $mod
 
 # xdg autostart
+exec_always --no-startup-id exec systemctl --user start --no-block i3-session.target
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock-fancy --nofork
 exec --no-startup-id nm-applet
