--- a/tmux/tmux.conf.template
+++ b/tmux/tmux.conf.template
@@ -25,7 +25,7 @@ bind -n 'M-W' new-window
 bind -n 'M-s' choose-session
 bind -n 'M-S' command-prompt "new-session -s '%%'"
 
-bind -n 'M-q' kill-pane
+bind -n 'M-q' if-shell "$is_vim" "send-keys M-q" "kill-pane"
 bind -n 'M-Q' kill-session
 bind -n 'M-z' detach-client
 
