--- a/polybar/config
+++ b/polybar/config
@@ -25,7 +25,7 @@ padding = 1
 
 module-margin = 1
 
-font-0 = Hasklug Nerd Font:pixelsize=10;2
+font-0 = JetBrainsMono NF:pixelsize=10;2
 
 modules-left = i3
 modules-center = date
