--- a/i3/config
+++ b/i3/config
@@ -1,5 +1,3 @@
-# vim:ft=i3config
-
 # vars
 set $mod Mod4
 set $alt Mod1
@@ -17,21 +15,21 @@ set $ws9 "9"
 set $ws10 "10"
 
 # window interface
-client.focused #1f2430 #ecc48d #1f2430 #6cbeff
-client.focused_inactive #1f2430 #333843 #d3d5db #6cbeff
-client.unfocused #1f2430 #333843 #d3d5db #addb67
+client.focused {{ colors.background }} {{ theme.primary }} {{ colors.background }} {{ theme.secondary }}
+client.focused_inactive {{ colors.background }} {{ colors.grey1 }} {{ colors.grey9 }} {{ theme.secondary }}
+client.unfocused {{ colors.background }} {{ colors.grey1 }} {{ colors.grey9 }} {{ colors.green }}
 
 hide_edge_borders none
-for_window [class=".*"] border pixel 4
+for_window [class=".*"] border pixel {{ border }}
 
 # gaps
-gaps inner 0px
-gaps top 30px
+gaps inner {{ gap }}px
+gaps top {{ fontSize * 3 + gap }}px
 gaps bottom 0px
 smart_gaps off
 
 # miscellaneous
-font pango:JetBrainsMono NF 10
+font pango:{{ font }} {{ fontSize }}
 floating_modifier $mod
 
 # xdg autostart
@@ -125,12 +123,11 @@ bindsym $mod+Left move workspace to output left
 bindsym $mod+Right move workspace to output right
 
 # i3
-set $mode_system System (l) lock, (e) logout, (r) reload, (k) restart, ($shift+r) reboot, ($shift+s) shutdown
+set $mode_system System (l) lock, (e) logout, (r) reload, ($shift+r) reboot, ($shift+s) shutdown
 mode "$mode_system" {
   bindsym l exec --no-startup-id i3lock-fancy, mode "default"
   bindsym e exit
   bindsym r reload, mode "default"
-  bindsym k exec --no-startup-id service_restart all
   bindsym $shift+r exec --no-startup-id shutdown now -r, mode "default"
   bindsym $shift+s exec --no-startup-id shutdown now, mode "default"
   bindsym Escape mode "default"
