--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,3 @@
-# vim:ft=tmux
-
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
 
 set -g default-terminal "tmux-256color"
@@ -13,7 +11,7 @@ set -g @plugin 'b0o/tmux-autoreload'
 # ----- BINDINGS -----
 set -g prefix M-Space
 
-bind -n 'M-r' source-file "$HOME/.tmux.conf" \; display "Configuration Reloaded!"
+bind -n 'M-r' source-file "$HOME/.config/tmux/tmux.conf" \; display "Configuration Reloaded!"
 bind -n 'M-c' send-keys C-l \; run-shell "sleep .3s" \; clear-history
 
 bind -n 'M-:' command-prompt
@@ -84,18 +82,18 @@ set -ga terminal-overrides ",$TERM:RGB"
 # Statusline
 set -g status on
 set -g status-justify centre
-set -g status-style fg="#ecc48d"
+set -g status-style fg="{{ theme.primary }}"
 set -g status-position bottom
 set -g status-left ""
 set -g status-right "#S | %d-%m %H:%M "
 
-set -g pane-active-border-style fg="#ecc48d"
-set -g pane-border-style fg="#6f737c"
+set -g pane-active-border-style fg="{{ theme.primary }}"
+set -g pane-border-style fg="{{ colors.grey4 }}"
 set -g pane-border-status bottom
 set -g pane-border-format "#{pane_index}"
 
-setw -g window-status-current-format "#[fg=#1f2430,bg=#ecc48d] #I:#W "
-setw -g window-status-format "#[fg=#e9ebf0] #I:#W "
+setw -g window-status-current-format "#[fg={{ colors.background }},bg={{ theme.primary }}] #I:#W "
+setw -g window-status-format "#[fg={{ colors.foreground }}] #I:#W "
 
 # Session
 set -g @continuum-restore 'on'
