--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -2,13 +2,13 @@ live_config_reload = true
 
 [colors.bright]
 black = "{{ colors.grey4 }}"
-blue = "{{ colors.light_blue }}"
-cyan = "{{ colors.light_cyan }}"
-green = "{{ colors.light_green }}"
-magenta = "{{ colors.light_magenta }}"
-red = "{{ colors.light_red }}"
+blue = "{{ colors.blue | lighten }}"
+cyan = "{{ colors.cyan | lighten }}"
+green = "{{ colors.green | lighten }}"
+magenta = "{{ colors.magenta | lighten }}"
+red = "{{ colors.red | lighten }}"
 white = "{{ colors.foreground }}"
-yellow = "{{ colors.light_yellow }}"
+yellow = "{{ colors.yellow | lighten }}"
 
 [colors.normal]
 black = "{{ colors.background }}"
