--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,6 +1,9 @@
 fading = false;
 shadow = false;
 
+{% if zen %}
+inactive-dim = 0.40;
+{% else %}
 {% if transparency %}
 active-opacity = 0.95;
 inactive-opacity = 0.85;
@@ -28,6 +31,7 @@ blur: {
   kern = "3x3box";
 };
 {% endif %}
+{% endif %}
 
 backend = "glx";
 vsync = true;
@@ -38,12 +42,14 @@ detect-transient = true;
 use-damage = true;
 log-level = "warn";
 
+{% if not zen %}
 corner-radius = {{ round }};
 round-borders = 1;
 rounded-corners-exclude = [
   "class_i = 'polybar'",
   "class_i = 'rofi'"
 ];
+{% endif %}
 
 wintypes:
 {
