--- a/polybar/config
+++ b/polybar/config
@@ -66,7 +66,7 @@ format = <label>
 format-prefix = "󰘚 "
 format-prefix-foreground = {{ theme.primary }}
 
-format-warn = <label>
+format-warn = <label-warn>
 format-warn-prefix = "󰘚 "
 format-warn-prefix-foreground = {{ theme.alert }}
 
@@ -80,7 +80,7 @@ format = <label>
 format-prefix = " "
 format-prefix-foreground = {{ theme.primary }}
 
-format-warn = <label>
+format-warn = <label-warn>
 format-warn-prefix = " "
 format-warn-prefix-foreground = {{ theme.alert }}
 
@@ -173,7 +173,7 @@ format = <label>
 format-prefix = " "
 format-prefix-foreground = {{ theme.primary }}
 
-format-warn = <label>
+format-warn = <label-warn>
 format-warn-prefix = " "
 format-warn-prefix-foreground = {{ theme.alert }}
 
