--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -8,7 +8,7 @@ force_tty = False
 
 presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:default cpu:0:block,net:0:tty"
 
-vim_keys = True
+vim_keys = False
 
 rounded_corners = True
 
