chore(tmux): change navigation and split keys

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,9 +14,7 @@ set -g prefix M-Space
 bind -n 'M-r' source-file "$HOME/.config/tmux/tmux.conf" \; display "Configuration Reloaded!"
 bind -n 'M-c' send-keys C-l \; run-shell "sleep .3s" \; clear-history
 
-bind -n 'M-:' command-prompt
-bind -n 'M-.' command-prompt -I '#S' "rename-session '%%'"
-bind -n 'M-,' command-prompt -I '#W' "rename-window '%%'"
+bind -n 'M-d' command-prompt
 
 bind -n 'M-w' choose-window
 bind -n 'M-W' new-window
@@ -41,10 +39,10 @@ bind -n 'M-N' if-shell "$is_vim" "send-keys M-N" "swap-pane -D"
 bind -n 'M-E' if-shell "$is_vim" "send-keys M-E" "swap-pane -U"
 bind -n 'M-I' send-keys "M-I"
 
-bind -n 'M-[' previous-window
-bind -n 'M-]' next-window
-bind -n 'M-{' swap-window -t -1 \; previous-window
-bind -n 'M-}' swap-window -t +1 \; next-window
+bind -n 'M-u' previous-window
+bind -n 'M-l' next-window
+bind -n 'M-U' swap-window -t -1 \; previous-window
+bind -n 'M-L' swap-window -t +1 \; next-window
 
 bind -n 'M-C-m' if-shell "$is_vim" "send-keys M-C-m" "resize-pane -L 4"
 bind -n 'M-C-n' if-shell "$is_vim" "send-keys M-C-n" "resize-pane -D 2"
@@ -59,9 +57,9 @@ bind -n 'M-=' next-layout \; previous-layout
 
 bind -n 'M-v' copy-mode
 
-bind -n 'M-!' break-pane \; next-window
-bind -n 'M-u' choose-window 'join-pane -h -s "%%"'
-bind -n 'M-U' choose-window 'join-pane -s "%%"'
+bind -n 'M-b' break-pane \; next-window
+bind -n 'M-j' choose-window 'join-pane -h -s "%%"'
+bind -n 'M-J' choose-window 'join-pane -s "%%"'
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
