--- a/templating/package.json
+++ b/templating/package.json
@@ -14,8 +14,9 @@
     "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
-    "eslint": "^8.24.0",
+    "eslint": "^8.57.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-standard": "^5.0.0"
   }
 }
