fix(tmux): properly install plugins

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,10 +65,6 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
-unbind -T choose-tree h;
-unbind -T choose-tree j;
-unbind -T choose-tree k;
-unbind -T choose-tree l;
 bind -T root m if -F "#{==:#{pane_mode},tree-mode}" "send h" "send m"
 bind -T root n if -F "#{==:#{pane_mode},tree-mode}" "send j" "send n"
 bind -T root e if -F "#{==:#{pane_mode},tree-mode}" "send k" "send e"
@@ -119,7 +115,9 @@ set -g @yank_action 'copy-pipe-no-clear'
 
 # ----- RUN -----
 
-if "test ! -d ~/.config/tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
+setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 
-run "~/.config/tmux/plugins/tpm/tpm"
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+run -b '~/.tmux/plugins/tpm/tpm'
