feat(mise): force nodejs version

--- a/mise/config.toml
+++ b/mise/config.toml
@@ -3,7 +3,7 @@ erlang = "25.2.2"
 elixir = "1.14.3-otp-25"
 elm = "latest"
 lua = "latest"
-nodejs = "latest"
+nodejs = "19.0.0"
 python = "latest"
 rust = "latest"
 ruby = "latest"
